--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
       href="assets/terceros/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.9.0/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore-compat.js"></script>
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- -------------------------------------
@@ -982,7 +987,91 @@
     <script src="assets/terceros/glightbox/js/glightbox.min.js"></script>
     <script src="assets/terceros/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/terceros/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.9.0/dist/sweetalert2.all.min.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <!-- Firebase -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+      import {
+        getFirestore,
+        collection,
+        addDoc,
+      } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
+      const firebaseConfig = {
+        apiKey: "AIzaSyAuC31nB2XKL88CDC1oVK_n0eWqwBV0uwA",
+        authDomain: "magnetica-database.firebaseapp.com",
+        projectId: "magnetica-database",
+        storageBucket: "magnetica-database.appspot.com",
+        messagingSenderId: "92080819795",
+        appId: "1:92080819795:web:2754bdba2e78eafb1040a6",
+        measurementId: "G-46N8WNR627",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const analytics = getAnalytics(app);
+
+      Swal.fire({
+        title: "Se parte de nuestra comunidad Magnética.",
+        html: `<input type="text" id="name-popup" class="swal2-input" placeholder="Nombre">
+        <input type="email" id="email-popup" class="swal2-input" placeholder="Email">`,
+        customClass: {
+          title: "title-class",
+          popup: "popup-class",
+        },
+        padding: "40px",
+        inputAttributes: {
+          autocapitalize: "off",
+        },
+        showCancelButton: true,
+        confirmButtonText: "Enviar suscripción",
+        confirmButtonColor: "#941F20",
+        showLoaderOnConfirm: true,
+        preConfirm: () => {
+          const name = Swal.getPopup().querySelector("#name-popup").value;
+          const email = Swal.getPopup().querySelector("#email-popup").value;
+          const today = new Date();
+          const day = today.getDate();
+          const month = today.getMonth() + 1; // Los meses comienzan en 0, por lo que se suma 1
+          const year = today.getFullYear();
+
+          const fechaHoy = `${day < 10 ? "0" + day : day}-${
+            month < 10 ? "0" + month : month
+          }-${year}`;
+
+          if (!name || !email) {
+            Swal.showValidationMessage(`Complete ambos campos`);
+          } else {
+            const datos = {
+              nombre: name,
+              email: email,
+              fecha: fechaHoy,
+            };
+            return addDoc(collection(db, "Email-registrados"), datos)
+              .then((docRef) => {
+                return { name: name, email: email };
+              })
+              .catch((error) => {
+                Swal.showValidationMessage(
+                  `Error al guardar los datos en Firebase: ${error}`
+                );
+              });
+          }
+        },
+      }).then((result) => {
+        if (result.isConfirmed) {
+          Swal.fire(
+            `
+      Nombre: ${result.value.name}
+      Email: ${result.value.email}
+    `.trim()
+          );
+        }
+      });
+    </script>
   </body>
 </html>
